[Ryuutama]: bug fixes and refactor (#5590)
* adding logo and testing colors

* [Ryuutama]: reorganizing info page, css fixes

* [Ryuutama]: remove typos and double text

* [Ryuutama]: remove tab from css

* [Ryuutama]: Remove hotlink to img, switch to github

* [Ryuutama]: scaling down font to fix in box

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -388,100 +388,6 @@
             </div>
             <!-- End Hidden Fields -->
 
-            <!-- Roll Templates -->
-            <rolltemplate class="sheet-rolltemplate-skillCheck">
-    			<div class="container">
-    				<div class="sheet-rolltemplate-skillCheck">
-    					<div class='rollTitle {{season}}'>{{name}}</div>
-    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
-    						{{#rollWasFumble() die1}}
-    							{{#rollWasFumble() die2}}
-    								<div class='fumble'>FUMBLE!!!</div>
-    							{{/rollWasFumble() die2}}
-    						{{/rollWasFumble() die1}}
-    						{{#rollWasCrit() die1}}
-    							{{#rollWasCrit() die2}}
-    								<div class='critical'>CRITICAL SUCCESS!!!</div>
-    							{{/rollWasCrit() die2}}
-    						{{/rollWasCrit() die1}}
-    						{{#rollTotal() die1 6}}
-    							{{#rollTotal() die2 6}}
-    								{{#^rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL SUCCESS!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    								{{#rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL SUCCESS!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/rollWasCrit() die1}}
-    								{{#^rollWasCrit() die1}}
-    									{{#rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL SUCCESS!!!</div>
-    									{{/rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    							{{/rollTotal() die2 6}}
-    						{{/rollTotal() die1 6}}
-    					</div>
-    				</div>
-    			</div>
-            </rolltemplate>
-
-            <rolltemplate class="sheet-rolltemplate-accuracyCheck">
-    			<div class="container">
-    				<div class="sheet-rolltemplate-accuracyCheck">
-    					<div class='rollTitle {{season}}'>{{name}} accuracy check</div>
-    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
-    						{{#rollWasFumble() die1}}
-    							{{#rollWasFumble() die2}}
-    								<div class='fumble'>FUMBLE!!!</div>
-    							{{/rollWasFumble() die2}}
-    						{{/rollWasFumble() die1}}
-    						{{#rollWasCrit() die1}}
-    							{{#rollWasCrit() die2}}
-    								<div class='critical'>CRITICAL HIT!!!</div>
-    							{{/rollWasCrit() die2}}
-    						{{/rollWasCrit() die1}}
-    						{{#rollTotal() die1 6}}
-    							{{#rollTotal() die2 6}}
-    								{{#^rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL HIT!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    								{{#rollWasCrit() die1}}
-    									{{#^rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL HIT!!!</div>
-    									{{/^rollWasCrit() die2}}
-    								{{/rollWasCrit() die1}}
-    								{{#^rollWasCrit() die1}}
-    									{{#rollWasCrit() die2}}
-    										<div class='critical'>CRITICAL HIT!!!</div>
-    									{{/rollWasCrit() die2}}
-    								{{/^rollWasCrit() die1}}
-    							{{/rollTotal() die2 6}}
-    						{{/rollTotal() die1 6}}
-    					</div>
-    				</div>
-    			</div>
-            </rolltemplate>
-
-            <rolltemplate class="sheet-rolltemplate-oneDieCheck">
-                <div class="container">
-                    <div class="sheet-rolltemplate-oneDieCheck">
-                        <div class='rollTitle {{season}}'>{{name}}</div>
-                        {{#result}}
-                            <div class='rollResult'>{{result}}</div>
-                        {{/result}}
-                        {{#freetext}}
-                            <div class='rollFreeText'>{{freetext}}</div>
-                        {{/freetext}}
-                    </div>
-                </div>
-            </rolltemplate>
-            <!-- End Roll Templates -->
-
             <!-- High Level Tabs -->
             <input type="radio" class="sheet-tab sheet-tab1" name="attr_core-tab" value="1" title="Details" checked="checked"/>
             <span class="sheet-tab sheet-tab1">Info</span>
@@ -496,42 +402,50 @@
             <!-- End High Level Tabs -->
 
             <span class='characterDetails'>
-                <div class='sheet-3colrow'>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Species</label>
-                        <select name='attr_species'>
-                            <option value='Human'>Human</option>
-                            <option value='Koneko Goblin'>Koneko Goblin</option>
-                        </select>
-                    </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel healthLabel'>Level</label>
-                        <input type='number' name='attr_level' value='1' min='1'/>
-                    </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel healthLabel'>Experience</label>
-                        <input type='number' name='attr_exp' value='0' min='0' style='width:70px'/>
+               <div class='flex'>
+                    <img class="logo" src="https://raw.githubusercontent.com/jlvgit/roll20-character-sheets/ryuutama-bug-fixes/Ryuutama/images/ryuutama_logo.png">
+                    <div class='flex-column round-box'>
+                        <div class="flex">
+                            <div class='flex-column'>
+                                <label>Name</label>
+        				        <input name="attr_character_name" placeholder="Character Name" title="@{character_name}" type="text" value="" />
+        				    </div>
+        				    <div class="flex-column">
+                                <label>Species</label>
+                                <select name='attr_species'>
+                                    <option value='Human'>Human</option>
+                                    <option value='Koneko Goblin'>Koneko Goblin</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class='flex'>
+                            <div class='flex-column'>
+                                <label>Level</label>
+                                <input type='number' name='attr_level' value='1' min='1'/>
+                            </div>
+                            <div class='flex-column'>
+                                <label>Experience</label>
+                                <input type='number' name='attr_exp' value='0' min='0' style='width:70px'/>
+                            </div>
+                            <div class='flex-column'>
+                                <label>Age</label>
+                                <input type='number' name='attr_charAge' min='1'/>
+                            </div>
+                            <div class='flex-column'>
+                                <label>Gender</label>
+                                <input type='text' name='attr_charGender'/>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class='sheet-2colrow'>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Age</label>
-                        <input type='number' name='attr_charAge' min='1'/>
-                    </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Gender</label>
-                        <input type='text' name='attr_charGender'/>
-                    </div>
-                </div>
-
-                <div class='sheet-2colrow'>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Personal Item</label>
+                <div class='flex personalItems'>
+                    <div class='flex-column'>
+                        <label class="attrLabel"> Personal Item </label>
                         <input type='text' name='attr_personalItem'/>
                     </div>
-                    <div class='sheet-col'>
-                        <label class='headerLabel infoLabel'>Party Role</label>
+                    <div class='flex-column'>
+                        <label class="attrLabel"> Party Role </label>
                         <select name="attr_role">
                             <option value=''></option>
                             <option value='Journal Keeper'>Journal Keeper</option>
@@ -542,21 +456,21 @@
                     </div>
                 </div>
 
-                <div class='sheet-row'>
-                    <label class='headerLabel infoLabel'>Image Color/Appearance</label>
+                <div class="flex-column">
+                    <label class="attrLabel">Image Color/Appearance</label>
                     <textarea name='attr_charAppearance'></textarea>
                 </div>
 
-                <div class='sheet-row'>
-                    <label class='headerLabel infoLabel'>Hometown/Reason for Travel</label>
+                <div class='flex-column'>
+                    <label class="attrLabel">Hometown/Reason for Travel</label>
                     <textarea name='attr_charHometown'></textarea>
                 </div>
 
-                <div class='sheet-row'>
-                    <label class='headerLabel infoLabel'>Notes</label>
+                <div class='flex-column'>
+                    <label class="attrLabel">Notes</label>
                     <textarea name='attr_charNotes'></textarea>
                 </div>
-                </span>
+            </span>
 
                 <span class='characterClass'>
                     <div class='sheet-2olrow'>
@@ -643,9 +557,9 @@
                     </div>
 
                     <label class='headerLabel checkLabel'>Mastered Weapons</label>
-                    <div class='sheet-row'>
+                    <div>
                         <div>Select initial weapon mastery:</div>
-                        <div class='sheet-col'>
+                        <div class='flex'>
                             <input type="radio" class="radioChoice radioChoice2" name="attr_initialMastery" value="2" title="Blade"/>
                             <span class="radioChoice radioChoice2">Blade</span>
                             <input type="radio" class="radioChoice radioChoice3" name="attr_initialMastery" value="3" title="Polearm"/>
@@ -663,9 +577,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showAttackTypeMastery' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select bonus weapon mastery gained from the attack type:</div>
-                            <div class='sheet-col'>
+                            <div class='flex'>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_attackTypeMastery" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice2">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice3" name="attr_attackTypeMastery" value="3" title="Polearm"/>
@@ -684,9 +598,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showSecondAttackTypeMastery' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select additional bonus weapon mastery gained from having the attack type twice:</div>
-                            <div class='sheet-col'>
+                            <div class='flex'>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_attackTypeMastery2" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice2">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice3" name="attr_attackTypeMastery2" value="3" title="Polearm"/>
@@ -705,9 +619,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showWeaponGrace' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select bonus weapon mastery gained from the noble class (can be the same as a previously selected weapon mastery):</div>
-                            <div class='sheet-col'>
+                            <div class="weaponBar">
                                 <input type="radio" class="radioChoice radioChoice1" name="attr_weaponGrace" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice1">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_weaponGrace" value="3" title="Polearm"/>
@@ -720,9 +634,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showSecondWeaponGrace' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select additional bonus weapon mastery gained from having the noble class twice:</div>
-                            <div class='sheet-col'>
+                            <div class="weaponBar">
                                 <input type="radio" class="radioChoice radioChoice1" name="attr_weaponGrace2" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice1">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_weaponGrace2" value="3" title="Polearm"/>
@@ -1216,7 +1130,7 @@
                     <label class='headerLabel checkLabel'>Common Checks</label>
                     <div class='sheet-2colrow'>
                         <div class='sheet-col'>
-                            <button class='skill-check-button' type='roll' value='&{template:skillCheck} {{season=@{currentSeason}}} {{name=Camp}} {{die1=[[1d@{currentDex}]]}} {{die2=[[1d@{currentInt}]]}} {{bonusesAndPenalties=[[@{campMod}[Skill Mod]+@{concentrationBonus}[Concentration]+@{classCampMod}[Class Bonus]+@{applyTerrain}[Terrain][Terrain]+@{applyWeather}[Weather][Weather]-@{overburdenPenalty}[Overburden][Overburden]]]}}' name='roll_campRoll'>Camp [DEX+INT]</button>
+                            <button class='skill-check-button' type='roll' value='&{template:skillCheck} {{season=@{currentSeason}}} {{name=Camp}} {{die1=[[1d@{currentDex}]]}} {{die2=[[1d@{currentInt}]]}} {{bonusesAndPenalties=[[@{campMod}[Skill Mod]+@{concentrationBonus}[Concentration]+@{classCampMod}[Class Bonus]+@{applyTerrain}[Terrain]+@{applyWeather}[Weather]-@{overburdenPenalty}[Overburden]]]}}' name='roll_campRoll'>Camp [DEX+INT]</button>
                             <input type='number' name='attr_campMod' value='0' class='journeyMod'/>
                         </div>
                         <div class='sheet-col'>
@@ -1644,4 +1558,98 @@
         </div>
         <!--- End of NPC sheet-->
     </div>
+    
+      <!-- Roll Templates -->
+            <rolltemplate class="sheet-rolltemplate-skillCheck">
+    			<div class="container">
+    				<div class="sheet-rolltemplate-skillCheck">
+    					<div class='rollTitle {{season}}'>{{name}}</div>
+    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
+    						{{#rollWasFumble() die1}}
+    							{{#rollWasFumble() die2}}
+    								<div class='fumble'>FUMBLE!!!</div>
+    							{{/rollWasFumble() die2}}
+    						{{/rollWasFumble() die1}}
+    						{{#rollWasCrit() die1}}
+    							{{#rollWasCrit() die2}}
+    								<div class='critical'>CRITICAL SUCCESS!!!</div>
+    							{{/rollWasCrit() die2}}
+    						{{/rollWasCrit() die1}}
+    						{{#rollTotal() die1 6}}
+    							{{#rollTotal() die2 6}}
+    								{{#^rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL SUCCESS!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    								{{#rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL SUCCESS!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/rollWasCrit() die1}}
+    								{{#^rollWasCrit() die1}}
+    									{{#rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL SUCCESS!!!</div>
+    									{{/rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    							{{/rollTotal() die2 6}}
+    						{{/rollTotal() die1 6}}
+    					</div>
+    				</div>
+    			</div>
+            </rolltemplate>
+
+            <rolltemplate class="sheet-rolltemplate-accuracyCheck">
+    			<div class="container">
+    				<div class="sheet-rolltemplate-accuracyCheck">
+    					<div class='rollTitle {{season}}'>{{name}} accuracy check</div>
+    					<div class='rollResult'>{{die1}} + {{die2}} + {{bonusesAndPenalties}}
+    						{{#rollWasFumble() die1}}
+    							{{#rollWasFumble() die2}}
+    								<div class='fumble'>FUMBLE!!!</div>
+    							{{/rollWasFumble() die2}}
+    						{{/rollWasFumble() die1}}
+    						{{#rollWasCrit() die1}}
+    							{{#rollWasCrit() die2}}
+    								<div class='critical'>CRITICAL HIT!!!</div>
+    							{{/rollWasCrit() die2}}
+    						{{/rollWasCrit() die1}}
+    						{{#rollTotal() die1 6}}
+    							{{#rollTotal() die2 6}}
+    								{{#^rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL HIT!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    								{{#rollWasCrit() die1}}
+    									{{#^rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL HIT!!!</div>
+    									{{/^rollWasCrit() die2}}
+    								{{/rollWasCrit() die1}}
+    								{{#^rollWasCrit() die1}}
+    									{{#rollWasCrit() die2}}
+    										<div class='critical'>CRITICAL HIT!!!</div>
+    									{{/rollWasCrit() die2}}
+    								{{/^rollWasCrit() die1}}
+    							{{/rollTotal() die2 6}}
+    						{{/rollTotal() die1 6}}
+    					</div>
+    				</div>
+    			</div>
+            </rolltemplate>
+
+            <rolltemplate class="sheet-rolltemplate-oneDieCheck">
+                <div class="container">
+                    <div class="sheet-rolltemplate-oneDieCheck">
+                        <div class='rollTitle {{season}}'>{{name}}</div>
+                        {{#result}}
+                            <div class='rollResult'>{{result}}</div>
+                        {{/result}}
+                        {{#freetext}}
+                            <div class='rollFreeText'>{{freetext}}</div>
+                        {{/freetext}}
+                    </div>
+                </div>
+            </rolltemplate>
+            <!-- End Roll Templates -->
 </html>
