Minor sheet edits for Landfall Marine

--- a/AW2E/apocalypse-world.html
+++ b/AW2E/apocalypse-world.html
@@ -808,13 +808,16 @@
                     <input type="radio" value="12" name="attr_food" class="sheet-food-checkbox sheet-food-12" />12
                     <br/>
                     <div class="sheet-food-clock"></div>
+                    <input type="checkbox" name="hunger1" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
+                    <input type="checkbox" name="hunger2" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
+                    <input type="checkbox" name="hunger3" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
                 </div>
                 <label class="sheet-other sheet-section-title"><span data-i18n="walkingSuit">Walking Suit</span>:</label>
                 <label class="sheet-custom"><span data-i18n="config">Configuration</span>:</label>
                 <div><label class="sheet-custom"><span data-i18n="power">Power</span>:</label>
-                <input type="number" name="attr_power" value="0" /> <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=^{force entrance_exit}}} {{roll_mod=@{power}}} {{result=[[2d6 + @{power} + ?{Forward/Help/Interference |0|-3|-2|-1|1|2|3}]]}}' name='roll_power' ></button></div>
+                <input type="number" name="attr_power" value="0" /> <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=^{power}}} {{roll_mod=@{power}}} {{result=[[2d6 + @{power} + ?{Forward/Help/Interference |0|-3|-2|-1|1|2|3}]]}}' name='roll_power' ></button></div>
                 <div><label class="sheet-custom"><span data-i18n="agility">Agility</span>:</label>
-                <input type="number" name="attr_agility" value="0" /> <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=^{hard_shutdown/cover_ground}}} {{roll_mod=@{agility}}} {{result=[[2d6 + @{agility} + ?{Forward/Help/Interference |0|-3|-2|-1|1|2|3}]]}}' name='roll_agility' ></button></div>
+                <input type="number" name="attr_agility" value="0" /> <button type='roll' value='&{template:aw} {{name=@{character_name}}} {{roll_name=^{agility}}} {{roll_mod=@{agility}}} {{result=[[2d6 + @{agility} + ?{Forward/Help/Interference |0|-3|-2|-1|1|2|3}]]}}' name='roll_agility' ></button></div>
                 <div><label class="sheet-custom"><span data-i18n="armor">Armor</span>:</label>
                 <input type="number" name="attr_armor" value="0" /></div>
                 <div><label class="sheet-custom"><span data-i18n="massive">Massive</span>:</label>
@@ -856,7 +859,14 @@
                     <br/>
                     <div class="sheet-ammo-clock"></div>
                 </div>
-
+                <label class="sheet-other sheet-section-title"><span data-i18n="missions">Available Missions</span>:</label>
+                <input type="checkbox" name="miss_ammo" value="ammo"/><label><span data-i18n="ammo">Ammo</span></label><br/>
+                <input type="checkbox" name="miss_bomb" value="bombardment"/><label><span data-i18n="bombardment">Bombardment</span></label><br/>
+                <input type="checkbox" name="miss_med" value="medical"/><label><span data-i18n="medical">Medical</span></label><br/>
+                <input type="checkbox" name="miss_ration" value="rations"/><label><span data-i18n="rations">Rations</span></label><br/>
+                <input type="checkbox" name="miss_reinforce" value="reinforcement"/><label><span data-i18n="reinforcement">Reinforcement</span></label><br/>
+                <input type="checkbox" name="miss_repair" value="repair"/><label><span data-i18n="repair">Repair</span></label><br/>
+                <input type="checkbox" name="miss_retro" value="retrofiture"/><label><span data-i18n="retrofiture">Retrofiture</span></label><br/>
             </div>
 
             <label class="sheet-other sheet-section-title"><span data-i18n="gear-barter">Gear & Barter</span>:</label>
