[5th Edition OGL] Compendium link

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -2208,6 +2208,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -2470,6 +2471,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -2728,6 +2730,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -2989,6 +2992,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -3247,6 +3251,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -3505,6 +3510,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -3766,6 +3772,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -4024,6 +4031,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -4282,6 +4290,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
@@ -4540,6 +4549,7 @@
                         </div>
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
+                            <button class="spell_link" type="compendium" name="attr_spellname"></button>
                             <a class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
