Fixed spacing for hunger checkboxes

--- a/AW2E/apocalypse-world.html
+++ b/AW2E/apocalypse-world.html
@@ -808,7 +808,7 @@
                     <input type="radio" value="12" name="attr_food" class="sheet-food-checkbox sheet-food-12" />12
                     <br/>
                     <div class="sheet-food-clock"></div>
-                    <input type="checkbox" name="hunger1" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
+                    <br/><input type="checkbox" name="hunger1" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
                     <input type="checkbox" name="hunger2" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
                     <input type="checkbox" name="hunger3" value="hunger"/><label><span data-i18n="hunger">hunger</span></label><br/>
                 </div>
