--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -21,10 +21,7 @@
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
-					<li>Combat Tab - Ranged Attacks. Added Malfunction field.</li>
-					<li>New Option - Use Malfunction. If checked, roll result will check for malfunction.</li>
-					<li>Character Sheet Default Options. Added Use Malfunction default option.</li>
-					<li>General Tab - Added turning and deceleration movement. Expand <b>Current</b> move row to view.</li>
+					<li>Bugfix: Combat Tab - Range Table Skill Roll button bug fix. The Malfunction value was not set to 0 causing the roll error.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -3397,7 +3394,7 @@
         						</span>	
     						</div>
     						<div class="cell col-input">
-    							<input type="number" default="0" name="attr_malfunction" title="Macro table name: repeating_ranged. Field name: malfunction" />
+    							<input type="number" default="0" name="attr_malfunction" value="0" title="Macro table name: repeating_ranged. Field name: malfunction" />
     						</div>
     						<div class="cell col-verify custom-checkbox">
     							<label>
@@ -4261,7 +4258,13 @@
 	
 	<h4>Version: <span name="attr_announcement_version"></span></h4>
 
-    <p>Pull Request: <span name="attr_latest_changes"></span></p>
+	<p>Pull Request: <span name="attr_latest_changes"></span></p>
+	
+	<ul>
+		<li>Bugfix: Combat Tab - Range Table Skill Roll button bug fix. The Malfunction value was not set to 0 causing the roll error.</li>
+	</ul>
+	
+	<h4>Version: 1.6.8</h4>
 
     <ul>
         <li>Combat Tab - Ranged Attacks. Added Malfunction field.</li>
@@ -5506,7 +5509,7 @@ If fail, attacker can opt to hit limb<br /></textarea>
 
 	var noop = function () {}; // do nothing.
 
-	var version = "1.6.8";
+	var version = "1.6.8.1";
 	
 	var latestChangesDate = "10/29/2019";
 
@@ -5619,7 +5622,8 @@ If fail, attacker can opt to hit limb<br /></textarea>
 				loadRepeating('repeating_cultures', 'points', 1);
 				loadRepeating('repeating_techniques', 'points', 1);
 				loadRepeating('repeating_spells', 'points', 1);
-
+				loadRepeating('repeating_spells', 'points', 1);
+				
 				// initalize all calculated stats
 				resetAll(v.mod_cascade);
 				
