--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -1608,7 +1608,7 @@
     						<input type="number" step="1" name="attr_deceleration" value="0" title="Macro name: deceleration" />
     					</div>
     					<div class="sheet-cell sheet-colAll">
-    					    <input type="number" step="1" name="attr_final_velocity" value="@{entered_move} - @{deceleration}" title="Macro name: final_velocity" disabled="disabled" />
+    					    <input type="text" name="attr_final_velocity" value="@{entered_move} - @{deceleration}" title="Macro name: final_velocity" disabled="disabled" />
     					</div>
     					<div class="sheet-cell sheet-colAll">
     						<input type="text" name="attr_current_move_deceleration" value="0" readonly="readonly" title="Macro name: current_move_deceleration" />
@@ -5622,8 +5622,7 @@ If fail, attacker can opt to hit limb<br /></textarea>
 				loadRepeating('repeating_cultures', 'points', 1);
 				loadRepeating('repeating_techniques', 'points', 1);
 				loadRepeating('repeating_spells', 'points', 1);
-				loadRepeating('repeating_spells', 'points', 1);
-				
+
 				// initalize all calculated stats
 				resetAll(v.mod_cascade);
 				
