magic finish, bug fixes npc

--- a/Shadowrun5thEdition/src/arms.html
+++ b/Shadowrun5thEdition/src/arms.html
@@ -40,7 +40,8 @@
 								<div class="settings-row">
 									<label data-i18n="modeoptions">Mode Options</label><input type="text" name="attr_mode_options" placeholder="SA/BF/FA" title="Available modes" />
 									<label data-i18n="range">Range</label><input type="text" name="attr_range" placeholder="25/150/350/550" title="Range" />
-									<label data-i18n="primary">Primary</label><input type="checkbox" class="skill-select" name="attr_primary" value="primary" title="Add to Core tab as primary range" />
+									<label data-i18n="primary">Primary</label>
+									<input type="checkbox" class="skill-select" name="attr_primary" value="primary" title="Add to Core tab as primary range" />
 								</div>
 								<div class="settings-row">
 									<input type="hidden" name="attr_dicepool" value="0" />
