--- a/Shadowrun5thEdition/src/magic.html
+++ b/Shadowrun5thEdition/src/magic.html
@@ -12,8 +12,10 @@
 						<option class="option-groups" value="@{sorcery}" data-i18n="sorcerygroup">Sorcery Group</option>
 						<option value="@{ritualspell}" selected="selected" data-i18n="ritualspellcasting">Ritual Spellcasting</option>
 					</select>
-					<label data-i18n="specializations">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="2" title="Applicable specialization" />
-					<label data-i18n="modifierdice">modifier dice</label><input type="number" name="attr_dicepool_modifier" title="Additional dicepool bonus" />
+					<label data-i18n="specializations">Specialization</label>
+					<input class="skill-select" type="checkbox" name="attr_spec" value="2" title="Applicable specialization" />
+					<label data-i18n="modifierdice">modifier dice</label>
+					<input type="number" name="attr_dicepool_modifier" title="Additional dicepool bonus" />
 				</div>
 				<label data-i18n="notes">Notes</label>
 				<textarea name="attr_notes" value="" placeholder="Ritual notes"></textarea>
