refactor complex forms

--- a/Shadowrun5thEdition/src/arms.html
+++ b/Shadowrun5thEdition/src/arms.html
@@ -59,7 +59,7 @@
 										<option class="option-headers" disabled="true" data-i18n="vehicleskills">Vehicle Skills</option>
 										<option value="@{gunnery}" data-i18n="gunnery">Gunnery</option>
 									</select>
-									<label data-i18n="specializations">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="2" title="Applicable specialization" />
+									<label data-i18n="specialization">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="2" title="Applicable specialization" />
 									<label data-i18n="modifierdice">modifier dice</label><input type="number" name="attr_dicepool_modifier" title="Additional dicepool bonus" />
 									<input class="skill-select" type="hidden" name="attr_skill" /><br />
 									<div class="exotic-warning">
@@ -126,7 +126,7 @@
 										<option class="option-headers" disabled="true" data-i18n="vehicleskills">Vehicle Skills</option>
 										<option value="@{gunnery}" data-i18n="gunnery">Gunnery</option>
 									</select>
-									<label data-i18n="specializations">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="+2" title="Applicable specialization"/>
+									<label data-i18n="specialization">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="+2" title="Applicable specialization"/>
 									<label data-i18n="modifierdice">modifier dice</label><input type="number" name="attr_dicepool_modifier" title="Additional dicepool bonus"/>
 									<div class="exotic-warning">
 										<span><i data-i18n="exoticnote">Exotic weapons are currently not linked to the skills section. Use Modifier Dice input to set dicepool.</i></span>
